gcc/testsuite/gcc.target/aarch64/sve/acle/general-c/type_redef_3.c
/* { dg-do compile } */

int svuint16_t; /* { dg-message "note: previous declaration of 'svuint16_t' was here" } */

#pragma GCC aarch64 "arm_sve.h"  /* { dg-error {'svuint16_t' redeclared} } */
